--- a/Bank/Resources/Localization/Localizable.strings
+++ b/Bank/Resources/Localization/Localizable.strings
@@ -3,3 +3,10 @@
 "email_placeholder" = "Digite seu e-mail";
 "password" = "Senha";
 "password_placeholder" = "Digite sua senha";
+
+//SignIn
+"login_title" = "Boas-vindas!";
+"login_button" = "Login";
+"login_forgot_your_password" = "Esqueceu a senha?";
+"login_dont_have_an_account" = "Não possui uma conta?";
+"login_create_account" = "Criar";
